# hackasat-finals-2022

./: README.md
challenges/: README.md
challenges/ground_chals/des-crypt/: .gitignore  Dockerfile  Makefile  README.md  all_keys.py  challenge.yml  cserv.c  des_encrypt.c
challenges/ground_chals/ftp-server/: .gitignore
challenges/ground_chals/padding_oracle/: Dockerfile  Makefile  README.md  cipher.py  server.py
challenges/ground_chals/web/: README.md
challenges/ground_chals/yay_science/: .gitattributes  Dockerfile  Makefile  README.md  astropoint.py  broadcaster.py  challenge.yml  generator.py  grader.py  mission.py  reqs.txt  run.py  satellite.py
challenges/satellite_chals/challenge1_three-app-mote/: COSMOS_cmds.md
challenges/satellite_chals/challenge2_puzzlebox/: COSMOS_cmds.md  README.md  encoding_function_lookuptable
challenges/satellite_chals/challenge3_riscv-business/: README.md  solve.rb
challenges/satellite_chals/challenge3_riscv-business/opensatkit_files/cfs/apps/telescope/: CMakeLists.txt  entrypoint.cpp
challenges/satellite_chals/challenge3_riscv-business/opensatkit_files/cfs/apps/telescope/h/: Telescope.hpp  TelescopeApp.hpp
challenges/satellite_chals/challenge3_riscv-business/opensatkit_files/cfs/apps/telescope/src/: Telescope.cpp  TelescopeApp.cpp
solvers/: .gitignore  README.md
solvers/ground_chals/des-crypt/: .gitignore  Makefile  (+6 more)
userguide/: README.md
userguide/guide_drop/: adcs.md  groundstation.md  missionservices.md  radio.md  safemode.md  satellite.md  spacetug.md
userguide/intel_drop/: .gitattributes  coffee.java  serv
(+144 files in other folders)
